# realityware

./: .editorconfig  .env  .env.example  .gitignore  FILE_STRUCTURE.md  MIGRATION.md  README.md  Rocket.toml  Rocket.toml.example  bunfig.toml  package-lock.json  package.json  turbo.json
apps/backend/: .gitignore  Cargo.toml  Rocket.toml.example  package.json
apps/backend/.cargo/: config.toml.example
apps/backend/migrations/2025-12-14-202236-0000_added_tickets/: down.sql  up.sql
apps/backend/src/: html_injection.rs  hub_test.rs  main.rs  prelude.rs
apps/backend/src/auth/: mod.rs  models.rs
apps/backend/src/db/: insert.rs  mod.rs  models.rs  prelude.rs  schema.rs
apps/backend/src/explore/: mod.rs
apps/backend/src/hub/: mod.rs
apps/backend/src/projects/: mod.rs
apps/backend/src/shop/: mod.rs
apps/backend/src/voting/: mod.rs
apps/backend/static/: 404.html  __next._tree.txt  index.html  index.txt
apps/backend/static/__next.!KGRhc2hib2FyZCk/: __PAGE__.txt
apps/backend/static/_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.html  index.txt
apps/backend/static/gallery/: __next._full.txt  __next._tree.txt  __next.gallery.__PAGE__.txt  index.html  index.txt
apps/backend/static/home/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.home.txt  index.html
apps/backend/static/hub/: __next.!KGRhc2hib2FyZCk.txt  __next._index.txt  __next._tree.txt  __next.hub.txt  (+3 more)
apps/backend/templates/: auth_complete.html.tera  gallery.html.tera  index.html.tera  projects.html.tera
(+80 files in other folders)
