[package]
name = "Reality_Ware"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rocket_oauth2 = "0.5.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
diesel = { version = "2.3.4", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenvy = "0.15.7"
uuid = { version="1.19.0", features=["v4"]}
chrono = "0.4.42"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
